--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -32,6 +32,7 @@
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@tanstack/react-query": "^5.90.6",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
