--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -40,9 +40,11 @@
     "gsap": "^3.13.0",
     "highlight.js": "^11.11.1",
     "lucide-react": "^0.552.0",
+    "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.24",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "postprocessing": "^6.38.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
@@ -51,7 +53,7 @@
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "three": "^0.181.0",
+    "three": "^0.181.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -62,6 +64,7 @@
     "@types/three": "^0.181.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "shadcn": "^3.5.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
